<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ELIMINARRECORRIDO</class>
 <widget class="QWidget" name="ELIMINARRECORRIDO">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>640</width>
    <height>520</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="QLabel" name="labelEliminar">
   <property name="geometry">
    <rect>
     <x>180</x>
     <y>60</y>
     <width>291</width>
     <height>41</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>20</pointsize>
     <weight>75</weight>
     <italic>true</italic>
     <bold>true</bold>
    </font>
   </property>
   <property name="text">
    <string>ELIMINAR RECORRIDO</string>
   </property>
  </widget>
  <widget class="QPushButton" name="bEliminarRecorrido">
   <property name="geometry">
    <rect>
     <x>60</x>
     <y>430</y>
     <width>240</width>
     <height>50</height>
    </rect>
   </property>
   <property name="text">
    <string>ELIMINAR</string>
   </property>
  </widget>
  <widget class="QLabel" name="lIDRecorrido">
   <property name="geometry">
    <rect>
     <x>270</x>
     <y>200</y>
     <width>121</width>
     <height>31</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>16</pointsize>
     <weight>75</weight>
     <italic>true</italic>
     <bold>true</bold>
    </font>
   </property>
   <property name="text">
    <string>IDRecorrido</string>
   </property>
  </widget>
  <widget class="QComboBox" name="cboxIDRecorrido">
   <property name="geometry">
    <rect>
     <x>170</x>
     <y>260</y>
     <width>321</width>
     <height>31</height>
    </rect>
   </property>
  </widget>
  <widget class="QPushButton" name="bRegresarERecorrido">
   <property name="geometry">
    <rect>
     <x>340</x>
     <y>430</y>
     <width>240</width>
     <height>50</height>
    </rect>
   </property>
   <property name="text">
    <string>REGRESAR</string>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
